exports[`<SnippetAreaToolbar /> snapshot tests matches snapshot of when it is not read-only 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "display": "flex",
      "flex": "1 0 auto",
      "flexFlow": "column wrap",
      "margin": "0",
      "padding": "0",
    }
  }>
  <div
    style={
      Object {
        "display": "flex",
        "flexFlow": "row wrap",
      }
    }>
    <TextField
      disabled={false}
      floatingLabelFixed={false}
      fullWidth={false}
      hintText="Snippet Name"
      id="titleField"
      multiLine={false}
      onChange={[Function]}
      rows={1}
      style={
        Object {
          "flex": "1 1 auto",
        }
      }
      type="text"
      underlineShow={true}
      value="" />
    <div
      data-for="avatar"
      data-tip={true}
      style={
        Object {
          "flexBasis": "auto",
          "margin": "3px",
          "marginLeft": "20px",
          "paddingTop": "10px",
          "verticalAlign": "bottom",
        }
      } />
    <ReactTooltip
      effect="solid"
      id="avatar"
      insecure={true}
      place="bottom"
      resizeHide={true}
      wrapper="div" />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexFlow": "row wrap",
      }
    }>
    <LanguageSelector
      disabled={false}
      language="python"
      onChange={[Function]}
      style={
        Object {
          "flex": "1 1 auto",
        }
      } />
    <div>
      <LockButton
        onClick={[Function]}
        readOnly={false}
        style={
          Object {
            "flex": "1 1 auto",
          }
        } />
      <SaveMenu
        canSave={true}
        enabled={true}
        id="saveMenu"
        onOrgChanged={[Function]}
        onSaveAsClick={[Function]}
        onSaveClick={[Function]}
        orgs={
          Array [
            "galactic-federation",
          ]
        }
        selectedOrg="galactic-federation"
        style={
          Object {
            "flex": "1 1 auto",
          }
        } />
    </div>
  </div>
</div>
`;

exports[`<SnippetAreaToolbar /> snapshot tests matches snapshot of when it is read-only 1`] = `
<div
  style={
    Object {
      "backgroundColor": "transparent",
      "display": "flex",
      "flex": "1 0 auto",
      "flexFlow": "column wrap",
      "margin": "0",
      "padding": "0",
    }
  }>
  <div
    style={
      Object {
        "display": "flex",
        "flexFlow": "row wrap",
      }
    }>
    <TextField
      disabled={false}
      floatingLabelFixed={false}
      fullWidth={false}
      hintText="Snippet Name"
      id="titleField"
      multiLine={false}
      onChange={[Function]}
      rows={1}
      style={
        Object {
          "flex": "1 1 auto",
        }
      }
      type="text"
      underlineShow={true}
      value="" />
    <div
      data-for="avatar"
      data-tip={true}
      style={
        Object {
          "flexBasis": "auto",
          "margin": "3px",
          "marginLeft": "20px",
          "paddingTop": "10px",
          "verticalAlign": "bottom",
        }
      } />
    <ReactTooltip
      effect="solid"
      id="avatar"
      insecure={true}
      place="bottom"
      resizeHide={true}
      wrapper="div" />
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexFlow": "row wrap",
      }
    }>
    <LanguageSelector
      disabled={true}
      language="python"
      onChange={[Function]}
      style={
        Object {
          "flex": "1 1 auto",
        }
      } />
    <div>
      <LockButton
        onClick={[Function]}
        readOnly={true}
        style={
          Object {
            "flex": "1 1 auto",
          }
        } />
      <SaveMenu
        canSave={true}
        enabled={true}
        id="saveMenu"
        onOrgChanged={[Function]}
        onSaveAsClick={[Function]}
        onSaveClick={[Function]}
        orgs={
          Array [
            "galactic-federation",
          ]
        }
        selectedOrg="galactic-federation"
        style={
          Object {
            "flex": "1 1 auto",
          }
        } />
    </div>
  </div>
</div>
`;
